[project]
name = "python_starter"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
requires-python = "<3.14,>=3.13"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "chromadb>=1.3.5",
    "dataclasses-json>=0.6.7",
    "faiss-cpu>=1.13.0",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "llama-index>=0.14.8",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-vector-stores-faiss>=0.5.1",
    "openai-agents[litellm]>=0.2.0",
    "pymupdf>=1.26.6",
    "tydi>=0.3.2",
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.4"
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.pyright]
typeCheckingMode = "on"
